# USElectricity

./: .flake8  .gitignore  .pre-commit-config.yaml  EBA_RNN.ipynb  EBA_RNN.py  EBA_RNN_mk2.py  EBA_explore.ipynb  EBA_fft.py  EBA_seasonal.ipynb  EBA_seasonal.py  EBA_util.py  ELEC_explore.ipynb  Notes.md  README.md  SQLexplore.ipynb  Todo.md  airport_play.ipynb  dataexplore.py  demand_rnn.py  get_weather_data.py  json_to_sql.py  load_data.py  plot_usage.py  sqlexplore.py  test_sql.py  tf_rnn.py  weather_dataframe.py
CSI_solar/: read_solar_data.py
EBA_seasonal/: fourier_model.py  multiseasonal.py  multiseasonal_temp.py  temp_model.py
SQL/: convert_elec.sql  create_elec_customers  create_elec_gen.sql  create_elec_rev.sql  play_analysis.sql  test.sql
code/: README.md  citylist.py  plot_usage.py  pytest.ini  setup.py  tf_rnn.py
docker/: Dockerfile.spark  Dockerfile.tfjupyter  docker-compose.gpu.yml  docker-compose.yml  docker_shell.sh  requirements.spark.txt  (+2 more)
src/: pyproject.toml  setup.cfg
src/us_elec/: README.md  plot_usage.py
src/us_elec/EBA_seasonal/: multiseasonal.py
src/us_elec/util/: awk_oneliner  get_weather_data.py  reorder_eba.py
uselec_module/: pyproject.toml  setup.cfg
uselec_module/src/us_elec/: tf_rnn.py
uselec_module/src/us_elec/EBA_forecast/: EBA_RNN.py  EBA_RNN_mk2.py  EBA_fft.py
uselec_module/src/us_elec/EBA_seasonal/: fourier_model.py  multiseasonal_temp.py
uselec_module/src/us_elec/SQL/: air_signs.csv  datasets.py  sqldriver.py
uselec_module/src/us_elec/util/: EBA_util.py  ELEC_lib.py  get_weather_data.py  json_to_sql.py
(+74 files in other folders)
