[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "us_elec"
version = "0.2"
authors = [
    {name = "J Mackrory"}
]
requires-python = ">3.7"
description = "Utilities for loading EIA, NOAA data, and forecasting in USElectricity project"
readme = "README.md"
dependencies = [
    'numpy',
    'pandas',
    'tensorflow',
    'psycopg2',
]
