[metadata]
name = uselec
version = 0.2
author = J Mackrory
description = Utility and model module for US-Electricity project.

[options]
install_requires =
    pandas
    numpy
    tensorflow
    psycopg2-binary
    matplotlib
    scikit-learn
    statsmodels
    sqlalchemy
    tzfpy
    geos
    shapely==1.8.0
    pyshp==2.3.1
    cartopy==0.21.1
    tqdm==4.64.1
    line_profiler
    jsonlines
    xarray
    cfgrib==0.9.10.3

package_dir =
    =src

[options.packages.find]
where=src